--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: pass
-    url: jdbc:mysql://localhost:3306/shopdb
+    password: root
+    url: jdbc:mysql://localhost:3306/clothes-shop_db
     platform: mysql
     initialization-mode: always
     continue-on-error: true
